unpackaged/main/default/objects/Autorisation__c/Autorisation__c.object-meta.xml
<CustomObject>
    <description>Abonnement CegidPasseport</description>
    <label>Autorisation</label>
    <nameField>
        <displayFormat>PPA- {000000000}</displayFormat>
        <label>Autorisation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autorisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>