unpackaged/main/default/objects/Autorisation__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Autorisations</relationshipLabel>
    <relationshipName>Autorisations</relationshipName>
    <type>Lookup</type>
</CustomField>