unpackaged/main/default/objects/Autorisation__c/fields/Profil_CegidPasseport__c.field-meta.xml
<CustomField>
    <fullName>Profil_CegidPasseport__c</fullName>
    <label>Profil CegidPasseport</label>
    <referenceTo>Profil_CegidPasseport__c</referenceTo>
    <relationshipLabel>Autorisations</relationshipLabel>
    <relationshipName>Autorisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>