unpackaged/main/default/objects/Autorisation__c/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service ID</label>
    <referenceTo>Service_Parameter__c</referenceTo>
    <relationshipLabel>Autorisations</relationshipLabel>
    <relationshipName>Autorisations</relationshipName>
    <type>Lookup</type>
</CustomField>