unpackaged/main/default/objects/Autorisation__c/fields/Service_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Validity_End_Date__c</fullName>
    <label>Service Validity End Date</label>
    <type>Date</type>
</CustomField>