unpackaged/main/default/objects/Autorisation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>