unpackaged/main/default/objects/Autorisation__c/fields/Subscription_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Validity_End_Date__c</fullName>
    <label>Subscription Validity End Date</label>
    <type>Date</type>
</CustomField>